# cargo-wharf

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE-MIT  Makefile  README.md
.ci/: install-buildx.sh
.github/workflows/: ci.yml  docker-hub-description.yml  integration.yml  publish-frontend.yml  publish-tools.yml  rust.yml
buildkit-cargo-frontend/: Cargo.toml
buildkit-cargo-frontend/src/: image.rs  main.rs  plan.rs
buildkit-cargo-frontend/src/graph/: command.rs  mod.rs
buildkit-frontend/: Cargo.toml
buildkit-frontend/src/: bridge.rs  lib.rs  oci.rs  options.rs  utils.rs
buildkit-frontend/tests/: oci-image-spec-min.json  oci-image-spec.json
buildkit-llb/: Cargo.toml
buildkit-llb/examples/: scratch.rs
buildkit-llb/src/: lib.rs  serialization.rs  utils.rs
buildkit-llb/src/frontend/: bridge.rs  error.rs  mod.rs  stdio.rs  utils.rs
buildkit-llb/src/ops/: exec.rs  mod.rs  source.rs  terminal.rs
buildkit-llb/src/ops/exec/: command.rs  mod.rs  mount.rs
buildkit-llb/src/ops/fs/: copy.rs  mkdir.rs  mkfile.rs  mod.rs  path.rs  sequence.rs
buildkit-llb/src/ops/source/: git.rs  image.rs  local.rs  mod.rs
buildkit-llb/src/serialization/: mod.rs  operation.rs  output.rs
buildkit-proto/: Cargo.toml  build.rs  update.sh
buildkit-proto/proto/github.com/moby/buildkit/api/types/: worker.proto
buildkit-proto/proto/github.com/moby/buildkit/frontend/gateway/pb/: gateway.proto
buildkit-proto/proto/github.com/moby/buildkit/solver/pb/: ops.proto
buildkit-proto/src/: lib.rs
cargo-buildkit-frontend/: Cargo.toml  Dockerfile
cargo-buildkit-frontend/src/: config.rs  debug.rs  frontend.rs  image.rs  main.rs  plan.rs  query.rs  shared.rs
cargo-buildkit-frontend/src/config/: base.rs  builder.rs  mod.rs  output.rs
cargo-buildkit-frontend/src/graph/: mod.rs  node.rs  ops.rs
cargo-buildkit-frontend/tests/: build-plan.json
cargo-container-tools/: CHANGELOG.md  Cargo.toml  Dockerfile  README.md
cargo-container-tools/src/: env.rs  lib.rs  metadata.rs  output.rs  source.rs
cargo-wharf/: Cargo.toml
cargo-wharf-frontend/: CHANGELOG.md  Cargo.toml  Dockerfile  README.md  build.rs
cargo-wharf-frontend/src/: debug.rs  frontend.rs  main.rs  plan.rs  query.rs  shared.rs  sources.rs
cargo-wharf-frontend/src/config/: base.rs  builder.rs  mod.rs  output.rs
cargo-wharf-frontend/src/graph/: mod.rs  node.rs  ops.rs
cargo-wharf-frontend/src/query/: mod.rs  print.rs  profile.rs  serialization.rs  source.rs  terminal.rs
cargo-wharf-frontend/tests/: build-plan.json  merged-buildscript-consumers.json  merged-buildscript-producers.json
cargo-wharf/src/: config.rs  main.rs  path.rs  plan.rs
cargo-wharf/src/commands/: build.rs  generate.rs  mod.rs  test.rs
cargo-wharf/src/engine/: docker.rs  mod.rs  utils.rs
cargo-wharf/src/engine/docker/: helpers.rs  mod.rs  utils.rs
cargo-wharf/src/graph/: command.rs  mod.rs  node.rs  ops.rs  source.rs
examples/multi-bin/: Cargo.toml  build.rs
examples/single-bin/: Cargo.toml
examples/single-bin-with-frontend/: Cargo.toml
examples/single-bin/src/: main.rs
examples/workspace/: .gitignore  Cargo.toml  Dockerfile.hbs  Dockerfile.j2
examples/workspace/binary-1/: Cargo.toml
examples/workspace/binary-1/src/: main.rs
examples/workspace/binary-2/: Cargo.toml
examples/workspace/binary-2/src/: main.rs
examples/workspace/lib-1/: Cargo.toml  build.rs
examples/workspace/lib-1/src/: lib.rs
src/: config.rs  main.rs  plan.rs  printer.rs
src/graph/: node.rs
tests/: build-script.binaries.dockerfile  simple.all.dockerfile  simple.binaries.dockerfile  simple.tests.dockerfile
tests/integration/: common.bash  debug.bats  example-multi-bin.bats  example-single-bin.bats  example-workspace.bats  features.bats  metadata.bats  pretty-output.bats
tests/integration/helpers/: images.bash  registry.bash
