[package]
name = "cargo-dockerfile"
version = "0.1.0"
authors = ["Denys Zariaiev <denys.zariaiev@gmail.com>"]
edition = "2018"

[dependencies]
cargo = { git = "https://github.com/rust-lang/cargo.git" }
semver = "0.9"
petgraph = "0.4"
env_logger = "0.5"
pathdiff = "0.1"
lazy_static = "1.0"

serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
