[package]
name = "buildkit-cargo-frontend"
version = "0.1.0"
authors = ["Denys Zariaiev <denys.zariaiev@gmail.com>"]
edition = "2018"

[dependencies]
env_logger = "0.6"
failure = "0.1"
futures-preview = { version = "0.3.0-alpha.16", features = ["compat"] }
log = "0.4"
petgraph = "0.4"
runtime = { version = "0.3.0-alpha.5", default-features = false }
runtime-tokio = "0.3.0-alpha.5"
semver = { version = "0.9", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dependencies.buildkit-llb]
path = "../buildkit-llb"
features = ["frontend"]
