[package]
name = "buildkit-llb"
version = "0.1.0"
authors = ["Denys Zariaiev <denys.zariaiev@gmail.com>"]
edition = "2018"

[dependencies]
either = "1.5"
failure = "0.1"
log = "0.4"
prost = "0.5"
prost-types = "0.5"
serde_json = "1.0"
sha2 = "0.8"

[dependencies.buildkit-proto]
path = "../buildkit-proto"
