[package]
name = "buildkit-proto"
version = "0.1.0"
authors = ["Denys Zariaiev <denys.zariaiev@gmail.com>"]
edition = "2018"

[dependencies]
bytes = "0.4"
futures = "0.1"

prost = "0.5"
prost-types = "0.5"

[dependencies.tower-grpc]
git = "https://github.com/tower-rs/tower-grpc"

[build-dependencies.tower-grpc-build]
git = "https://github.com/tower-rs/tower-grpc"
