[package]
name = "cargo-buildkit-frontend"
version = "0.1.0"
authors = ["Denys Zariaiev <denys.zariaiev@gmail.com>"]
edition = "2018"
publish = false

[dependencies]
buildkit-frontend = "0.1"
buildkit-llb = "0.1"
buildkit-proto = "0.1"
chrono = "0.4"
either = "1.5"
env_logger = "0.7"
failure = "0.1"
futures-preview = { version = "0.3.0-alpha.18", features = ["compat"] }
lazy_static = "1.0"
log = "0.4"
petgraph = { version = "0.4", features = ["serde-1"] }
prost = "0.5"
runtime = { version = "0.3.0-alpha.6", default-features = false }
runtime-tokio = "0.3.0-alpha.5"
semver = { version = "0.9", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
take_mut = "0.2"

[dev-dependencies]
maplit = "1.0"
