[package]
name = "cargo-container-tools"
version = "0.2.0-alpha.0"
authors = ["Denys Zariaiev <denys.zariaiev@gmail.com>"]
edition = "2018"
publish = false

[dependencies]
cargo = "0.38"
clap = "2.33"
either = "1.5"
failure = "0.1"
lazy_static = "1.4"
semver = "0.9"
toml = "0.5"

serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
