# syntax = denzp/cargo-wharf-frontend:v0.1.0-alpha.2

[package]
name = "cargo-container-tools"
version = "0.2.0-alpha.3"
authors = ["Denys Zariaiev <denys.zariaiev@gmail.com>"]
edition = "2018"
publish = false
license = "MIT/Apache-2.0"

[dependencies]
cargo = "0.62"
clap = "2.33"
either = "1.5"
anyhow = "1.0.57"
lazy_static = "1.4"
semver = "1"
toml_edit = {version = "0.13.4", features = ["easy", "serde"]}

serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"

[package.metadata.wharf.builder]
image = "clux/muslrust:stable"
target = "x86_64-unknown-linux-musl"

[package.metadata.wharf.output]
image = "alpine"
workdir = "/"

[[package.metadata.wharf.binary]]
name = "cargo-build-plan"
destination = "/usr/local/bin/cargo-build-plan"

[[package.metadata.wharf.binary]]
name = "cargo-buildscript-capture"
destination = "/usr/local/bin/cargo-buildscript-capture"

[[package.metadata.wharf.binary]]
name = "cargo-buildscript-apply"
destination = "/usr/local/bin/cargo-buildscript-apply"

[[package.metadata.wharf.binary]]
name = "cargo-metadata-collector"
destination = "/usr/local/bin/cargo-metadata-collector"

[[package.metadata.wharf.binary]]
name = "cargo-test-runner"
destination = "/usr/local/bin/cargo-test-runner"
