# syntax = denzp/cargo-wharf-frontend:v0.1.0-alpha.0

[package]
name = "cargo-wharf-frontend"
version = "0.1.0-alpha.1"
authors = ["Denys Zariaiev <denys.zariaiev@gmail.com>"]
edition = "2018"
publish = false
license = "MIT/Apache-2.0"

[dependencies]
async-trait = "0.1"
buildkit-frontend = "0.2"
buildkit-llb = "0.1"
buildkit-proto = "0.1"
chrono = "0.4"
either = "1.5"
env_logger = "0.7"
failure = "0.1"
futures-preview = { version = "0.3.0-alpha.18", features = ["compat"] }
lazy_static = "1.0"
log = "0.4"
petgraph = { version = "0.4", features = ["serde-1"] }
prost = "0.5"
runtime = { version = "0.3.0-alpha.6", default-features = false }
runtime-tokio = "0.3.0-alpha.5"
semver = { version = "0.9", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
take_mut = "0.2"

[build-dependencies]
cfg-if = "0.1"
semver = { version = "0.9", features = ["serde"] }
serde = "1.0"
toml = "0.5"

[dev-dependencies]
maplit = "1.0"
pretty_assertions = "0.6"

[features]
container-tools-testing = []
container-tools-local = []
container-tools-master = []

[package.metadata.wharf.builder]
image = "clux/muslrust:stable"
target = "x86_64-unknown-linux-musl"

[package.metadata.wharf.output]
image = "scratch"
workdir = "/"
entrypoint = ["/usr/local/bin/cargo-wharf-frontend"]

[[package.metadata.wharf.binary]]
name = "cargo-wharf-frontend"
destination = "/usr/local/bin/cargo-wharf-frontend"
