# syntax = denzp/cargo-wharf-frontend:v0.1.0-alpha.2

[package]
name = "cargo-wharf-frontend"
version = "0.1.0-alpha.3"
authors = ["Denys Zariaiev <denys.zariaiev@gmail.com>"]
edition = "2018"
publish = false
license = "MIT/Apache-2.0"

[dependencies]
async-trait = "0.1"
buildkit-frontend = "0.3"
buildkit-llb = "0.2"
buildkit-proto = "0.2"
chrono = "0.4"
either = "1.5"
env_logger = "0.7"
failure = "0.1"
futures = "0.3"
lazy_static = "1.0"
log = "0.4"
petgraph = { version = "0.5", features = ["serde-1"] }
prost = "0.6"
semver = { version = "0.10", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
take_mut = "0.2"

[dependencies.tokio]
version = "0.2"
features = ["rt-core", "macros"]

[build-dependencies]
cfg-if = "0.1"

[dev-dependencies]
maplit = "1.0"
pretty_assertions = "0.6"

[features]
container-tools-testing = []
container-tools-local = []
container-tools-master = []

[package.metadata.wharf.builder]
image = "clux/muslrust:stable"
target = "x86_64-unknown-linux-musl"

[package.metadata.wharf.output]
image = "scratch"
workdir = "/"
entrypoint = ["/usr/local/bin/cargo-wharf-frontend"]

[[package.metadata.wharf.binary]]
name = "cargo-wharf-frontend"
destination = "/usr/local/bin/cargo-wharf-frontend"
