[package]
name = "cargo-wharf"
version = "0.1.0"
authors = ["Denys Zariaiev <denys.zariaiev@gmail.com>"]
edition = "2018"

[dependencies]
log = "0.4"
clap = "2.32"
toml = "0.4"
tera = "0.11"
cargo = { git = "https://github.com/rust-lang/cargo.git" }
semver = "0.9"
either = "1.5"
failure = "0.1"
petgraph = "0.4"
pathdiff = "0.1"
env_logger = "0.5"
path-absolutize = "1.1"

serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"

[dev-dependencies]
maplit = "1.0"
pretty_assertions = "0.5"
