[package]
name = "binary-1"
version = "0.1.0"
authors = ["Denys Zariaiev <denys.zariaiev@gmail.com>"]
edition = "2018"

[features]
the-special-feature = []

[dependencies]
clap = "2.33"

[dependencies.lib-1]
path = "../lib-1"

[[package.metadata.wharf.binary]]
name = "binary-1"
destination = "/bin/binary-1"
