[package]
name = "binary-2"
version = "0.1.0"
authors = ["Denys Zariaiev <denys.zariaiev@gmail.com>"]
edition = "2018"

[dependencies]
nix = { git = "ssh://git@github.com/nix-rust/nix.git" }

[dependencies.lib-1]
path = "../lib-1"

[[package.metadata.wharf.binary]]
name = "binary-2"
destination = "/usr/local/bin/binary-2"
